added some style changes

--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -2,7 +2,7 @@
 
 .container {
   position: relative;
-  background-color: black;
+  background-color: rgb(143, 31, 110);
   border-radius: 15px;
   padding: 50px;
   margin-top: 150px;
@@ -47,7 +47,7 @@
   padding: 25px;
   background-image: linear-gradient(
     90deg,
-    rgba(165, 215, 232, 0.42) 0%,
+    rgba(168, 69, 145, 0.42) 0%,
     rgba(255, 255, 255, 0) 100%
   );
   background-size: 0 100%;
